force-app/main/default/objects/Payment_Detail__c/Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>