force-app/main/default/objects/Payment_Detail__c/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>