force-app/main/default/objects/Payment_Detail__c/fields/Payer_Details__c.field-meta.xml
<CustomField>
    <fullName>Payer_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Details</label>
    <referenceTo>Guest_Detail__c</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>